tests/baselines/reference/contextualTypingOfConditionalExpression2.errors.txt
tests/cases/compiler/contextualTypingOfConditionalExpression2.ts(11,5): error TS2322: Type '((a: C) => 数字) | ((b: 数字) => 无值)' is not assignable to type '(a: A) => 无值'.
  Type '(b: 数字) => 无值' is not assignable to type '(a: A) => 无值'.
    Types of parameters 'b' and 'a' are incompatible.
      Type 'A' is not assignable to type '数字'.


==== tests/cases/compiler/contextualTypingOfConditionalExpression2.ts (1 errors) ====
    class A {
        foo: number;
    }
    class B extends A {
        bar: number;
    }
    class C extends A {
        baz: number;
    }
    
    var x2: (a: A) => void = true ? (a: C) => a.foo : (b: number) => { };
        ~~
!!! error TS2322: Type '((a: C) => 数字) | ((b: 数字) => 无值)' is not assignable to type '(a: A) => 无值'.
!!! error TS2322:   Type '(b: 数字) => 无值' is not assignable to type '(a: A) => 无值'.
!!! error TS2322:     Types of parameters 'b' and 'a' are incompatible.
!!! error TS2322:       Type 'A' is not assignable to type '数字'.
    